--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sizer: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
   lottie: ^1.4.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
