--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   lottie: ^1.4.1
   intl: ^0.17.0
+  image_picker: ^0.8.4+11
+
+  cloud_firestore: ^3.4.8
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +46,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  change_app_package_name: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
