--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   lottie: ^1.4.1
   intl: ^0.17.0
   image_picker: ^0.8.4+11
-
+  persistent_bottom_nav_bar: ^4.0.2
   cloud_firestore: ^3.4.8
 
 dev_dependencies:
