--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   image_picker: ^0.8.4+11
   persistent_bottom_nav_bar: ^4.0.2
   cloud_firestore: ^3.4.8
+  firebase_auth: ^3.11.0
+  firebase_core: ^1.24.0
+  provider: ^6.0.3
+
 
 
 
