--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^3.11.0
   firebase_core: ^1.24.0
   provider: ^6.0.3
+  shared_preferences: ^2.0.15
+  flutter_secure_storage: ^6.0.0
 
 
 
