--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   flutter_secure_storage: ^6.0.0
+  google_nav_bar: ^5.0.6
+  line_icons: ^2.0.1
 
 
 
