--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   jiffy: ^4.1.0
   grouped_list: ^4.2.0
   flutter_screenutil: 5.3.1
+  url_launcher: ^6.1.5
+  fluttertoast: ^8.0.9
+  stripe_sdk: ^5.0.0-nullsafety.0
+  dio: ^4.0.5
+  flutter_credit_card: ^3.0.4
+
 
 
 
@@ -60,6 +66,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
+
+
+
+flutter_icons:
+
+  android: true
+  image_path: "assets/images/logo.png"
+
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
